fixed directions overflow

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,10 @@ body {
   margin-top: 8px;
   margin-left: 8px;
 }
+.info-win {
+  /* kintrans is messing with this so this is a hack */
+  margin-top: 96px;
+}
 
 .olli-logo-div, .stop-name-div {
   color: white;
@@ -295,6 +299,7 @@ button.text-directions-button {
 }
 
 .directions {
+  max-height: 100%;
   padding-right: 8px;
   white-space: nowrap;
   overflow-x: scroll;
